# xitool

./: .gitattributes  .gitignore  BUGS  Makefile.am  README.md  configure.ac  notes  notes.md  xitool.kdev4
src/: Makefile.am  colours.c  colours.h  error.c  error.h  list.c  list.h  modules.c  modules.h  names.c  names.h  props.c  props.h  query.c  query.h  resources.c  resources.h  state.c  state.h  table.c  table.h  versionhelp.c  versionhelp.h  xitool.c  xitool.h  xiversion.c  xiversion.h
templates/: module.c  module.desktop  module.h  module.tar.bz2
